--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "aws-sdk": "^2.714.0",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "vue": "^2.6.11",
