--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.2.4",
     "aws-sdk": "^2.714.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4"
   },
