--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.15.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
+    "emailjs-com": "^2.6.3",
     "vue": "^2.6.11",
     "vue-router": "^3.3.4"
   },
