--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "emailjs-com": "^2.6.3",
+    "tiny-cookie": "^2.3.2",
     "vue": "^2.6.11",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^3.3.4"
   },
   "devDependencies": {
