--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "emailjs-com": "^2.6.3",
+    "register-service-worker": "^1.7.1",
     "tiny-cookie": "^2.3.2",
     "vue": "^2.6.11",
     "vue-cookie": "^1.1.4",
     "vue-router": "^3.3.4"
   },
   "devDependencies": {
+    "@vue/cli-plugin-pwa": "^4.5.4",
     "@vue/cli-service": "~4.4.0",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
