--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.4.4",
     "@sendgrid/mail": "^7.2.4",
     "aws-sdk": "^2.714.0",
     "axios": "^0.19.2",
@@ -15,11 +16,14 @@
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "emailjs-com": "^2.6.3",
+    "jquery": "^3.5.1",
     "register-service-worker": "^1.7.1",
     "tiny-cookie": "^2.3.2",
     "vue": "^2.6.11",
     "vue-cookie": "^1.1.4",
-    "vue-router": "^3.3.4"
+    "vue-js-popover": "^1.2.1",
+    "vue-router": "^3.3.4",
+    "vuelidate": "^0.7.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-pwa": "^4.5.4",
